--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ systemProp.jdk.tls.client.protocols="TLSv1,TLSv1.1,TLSv1.2"
 // Name of project
 rootProject.name = 'mapping-service'
 // Version of project
-version=1.0.4
+version=1.0.5-SNAPSHOT
+netbeans.hint.jdkPlatform=JDK_17
 action.custom-1=allTests
 action.custom-1.args=--configure-on-demand -w -x check 
