--- a/settings/application-default.properties
+++ b/settings/application-default.properties
@@ -17,9 +17,19 @@ server.compression.enabled=false
 # bigger mapping inputs, e.g., while extracting information for a zipped dataset.
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+###############################################################################
 # Logging settings
+###############################################################################
 logging.level.root=ERROR
-logging.level.edu.kit.datamanager=INFO
+logging.level.edu.kit.datamanager=TRACE
+
+# Default properties file for configuring log(back)
+# Should work without this setting!?
+logging.config=logback-spring.xml
+
+
+
+
 springdoc.swagger-ui.disable-swagger-default-url=true
 # Actuator settings
 info.app.name=Mapping-Service
