--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,4 @@ rootProject.name = 'mapping-service'
 version=1.0.4
 action.custom-1=allTests
 action.custom-1.args=--configure-on-demand -w -x check 
+netbeans.hint.jdkPlatform=JDK_17
